--- a/test.html
+++ b/test.html
@@ -6,16 +6,15 @@
     <link rel="stylesheet" href="demo/css/demo.css">
     <link rel="stylesheet" href="demo/css/demo.css?v=1">
     <link rel="stylesheet" href="demo/css/demo.css?w=1">
-    <link rel="stylesheet" href="demo/css/demo.css?x=1" >
-    <link rel="stylesheet" href="demo/css/demo.css?y=1" />
+    <link rel="stylesheet" href="demo/css/demo.css?=1" >
+    <link rel="stylesheet" href="demo/css/demo.css?yx=10" />
 </head>
 <body>
-<script src="demo/js/demo.js"></script>
-<script src="demo/js/demo.js?v=1"></script>
-<script src='demo/js/demo.js'></script>
+<script src="demo/js/demo.js?v=2"></script>
+<script src="demo/js/demo.js?v=2"></script>
+<script src="demo/js/demo.js?v=2" ></script>
 <script>
-    var height = $(window).css("height");
-    $(window).css("height","320px");
+    $(".js?v=2").click();
 </script>
 </body>
 </html>
