新增若干页

--- a/test.html
+++ b/test.html
@@ -1,20 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="demo/css/demo.css">
-    <link rel="stylesheet" href="demo/css/demo.css?v=1">
-    <link rel="stylesheet" href="demo/css/demo.css?w=1">
-    <link rel="stylesheet" href="demo/css/demo.css?=1" >
-    <link rel="stylesheet" href="demo/css/demo.css?yx=10" />
-</head>
-<body>
-<script src="demo/js/demo.js?v=2"></script>
-<script src="demo/js/demo.js?v=2"></script>
-<script src="demo/js/demo.js?v=2" ></script>
-<script>
-    $(".js?v=2").click();
-</script>
-</body>
-</html>
+
+<!--<a id="menu-distribution-order" href="//xxxx">分销订单</a>
